src/test/deca/syntax/valid/instance_pars_01.deca
// Description:
//    Programme minimaliste include.
//
// Resultats:
//     Hello
//
//
// Historique:
//    cree le 01/01/2023

{

    int i = 1;
    if (i instanceof int) {
        print("Hello");
    }

}