src/test/deca/syntax/invalid/include_lex_2.deca
// Description:
//    tests de programme incorrect lexicalement (INCLUDE non terminé)
//
// Resultats:
//    Ligne 11: Include non terminé
//
//
// Historique:
//    cree le 03/01/2023

{
    #include "fichier;
}